fix a css broken in the i18n merge with the tree list

--- a/public/stylesheets/refinery/refinery.css
+++ b/public/stylesheets/refinery/refinery.css
@@ -461,7 +461,7 @@ pre {
   background-image: url('/images/refinery/branch-end.gif');
 }
 #records.tree li {
-  line-height: 24px;
+  line-height: 25px;
 }
 #records.tree li span.spacing, .tree li span.spacing {
   display: none;
@@ -664,7 +664,7 @@ label.stripped {
 }
 
 #content #records.tree > ul li .actions a {
-  margin: 4px 3px 0px 3px;
+  margin: 3px 3px 0px 3px;
   line-height: 24px;
 }
 .actions a * {
